Updated the API image to install Node.js 20 so the bundled undici comes from the 6.x line (Node 20/22), rather than the 5.x line (Node 18). ([npmjs.com](https://www.npmjs.com/undici?utm_source=openai)) - `api/Dockerfile`: added NodeSource repo setup and switched the `nodejs` install to Node 20.
CVE-2023-24807 is a ReDoS in undici `Headers.set()`/`Headers.append()` and affects undici versions before 5.19.1. ([nvd.nist.gov](https://nvd.nist.gov/vuln/detail/CVE-2023-24807))
Based on the undici LTS/bundling table, Node 20 should bundle undici 6.x, which is newer than 5.19.1 and thus outside the affected range (inference). ([npmjs.com](https://www.npmjs.com/undici?utm_source=openai))

Tests not run (Dockerfile change only).

Next steps:
1. Rebuild the API image and verify `node -p "process.versions.undici"` is >= 5.19.1.
2. Re-run your Docker Scout scan.

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -56,10 +56,20 @@ RUN groupadd -r -g ${dify_uid} dify && \
 
 RUN \
     apt-get update \
+    && apt-get install -y --no-install-recommends \
+        ca-certificates \
+        curl \
+        gnupg \
+    && mkdir -p /etc/apt/keyrings \
+    && curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key \
+        | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg \
+    && echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_20.x nodistro main" \
+        > /etc/apt/sources.list.d/nodesource.list \
+    && apt-get update \
     # Install dependencies
     && apt-get install -y --no-install-recommends \
         # basic environment
-        curl nodejs \
+        nodejs \
         # for gmpy2 \
         libgmp-dev libmpfr-dev libmpc-dev \
         # For Security
